Sat Oct 13 06:27:31 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/testsuite.cc: Add safeunistd.h unconditionally for
	  isatty, required by GCC 4.7

Sat Oct 13 03:09:48 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/valueranges.rst: Update documentation to reflect change in
	  Xapian 1.1.2 - DateValueRangeProcessor and StringValueRangeProcessor
	  now support a prefix or suffix.

Wed Jun 27 12:51:25 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Update the version too!

Wed Jun 27 12:03:08 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.12.

Wed Jun 27 11:35:15 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* AUTHORS: Add GSoC students.

Tue Jun 26 11:46:55 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.11.

Tue Jun 26 08:52:18 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian.h: Add check for Qt headers being included before us
	  and defining 'slots' as a macro - if they are, give a clear error
	  advising how to work around this.

Fri Jun 22 11:46:25 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Fri Jun 15 10:45:20 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/admin_notes.rst: Correction - we don't "create a lock file", we
	  "lock a file".

Thu Jun 14 14:08:48 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_replicate.cc: Make sure XAPIAN_MAX_CHANGESETS gets unset
	  after testcases which set it, so further testcases don't waste time
	  generating changesets.

Thu Jun 14 13:54:29 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/replication.rst: The value of XAPIAN_MAX_CHANGESETS does now
	  actually determine how many changesets we keep.

Thu Jun 14 13:40:18 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk: