@@ -1,3 +1,9 @@
+Sat Oct 13 07:11:40 GMT 2012  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* common/debuglog.cc: Preserve errno over debug logging calls, so they
+	  can safely be added to code which expects errno not to change.
+
 Sat Oct 13 06:27:31 GMT 2012  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
